namecache, bump version