@@ -11,24 +11,22 @@ import com.ecotale.util.PerformanceMonitor;
 import com.hypixel.hytale.component.Ref;
 import com.hypixel.hytale.component.Store;
 import com.hypixel.hytale.server.core.Message;
-import com.hypixel.hytale.server.core.command.system.AbstractCommand;
 import com.hypixel.hytale.server.core.command.system.CommandContext;
 import com.hypixel.hytale.server.core.command.system.CommandSender;
 import com.hypixel.hytale.server.core.command.system.CommandUtil;
 import com.hypixel.hytale.server.core.command.system.basecommands.AbstractAsyncCommand;
 import com.hypixel.hytale.server.core.entity.entities.Player;
-import com.hypixel.hytale.server.core.entity.entities.player.pages.CustomUIPage;
 import com.hypixel.hytale.server.core.universe.PlayerRef;
 import com.hypixel.hytale.server.core.universe.Universe;
 import com.hypixel.hytale.server.core.universe.world.World;
 import com.hypixel.hytale.server.core.universe.world.storage.EntityStore;
 import org.checkerframework.checker.nullness.compatqual.NonNullDecl;
+import org.jetbrains.annotations.NotNull;
 
 import java.awt.*;
 import java.util.*;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.Executor;
 
 public class EcoAdminCommand
 extends AbstractAsyncCommand {
@@ -49,7 +47,7 @@ extends AbstractAsyncCommand {
     @NonNullDecl
     protected CompletableFuture<Void> executeAsync(CommandContext commandContext) {
         Player player;
-        Ref ref;
+        Ref<EntityStore> ref;
         CommandSender sender = commandContext.sender();
         if (sender instanceof Player && (ref = (player = (Player)sender).getReference()) != null && ref.isValid()) {
             Store<EntityStore> store = ref.getStore();
@@ -76,7 +74,7 @@ extends AbstractAsyncCommand {
     }
 
     private static void updateHud(UUID playerUuid, double newBalance) {
-        BalanceHud.updatePlayerHud(playerUuid, newBalance);
+        BalanceHud.updatePlayerHud(playerUuid, newBalance, null);
     }
 
     private static class EcoSetCommand
@@ -88,14 +86,14 @@ extends AbstractAsyncCommand {
 
         @NonNullDecl
         protected CompletableFuture<Void> executeAsync(CommandContext ctx) {
-            Double amount;
+            double amount;
             String input = ctx.getInputString();
             String rawArgsStr = CommandUtil.stripCommandName((String)input);
             String[] rawArgs = rawArgsStr.trim().isEmpty() ? new String[]{} : rawArgsStr.trim().split("\\s+");
             List<String> args = Arrays.asList(rawArgs);
             CommandSender sender = ctx.sender();
             int argOffset = 0;
-            if (!args.isEmpty() && (args.get(0).equalsIgnoreCase("set") || args.get(0).equalsIgnoreCase("eco"))) {
+            if (!args.isEmpty() && (args.getFirst().equalsIgnoreCase("set") || args.getFirst().equalsIgnoreCase("eco"))) {
                 ++argOffset;
             }
             if (args.size() > argOffset && args.get(argOffset).equalsIgnoreCase("set")) {
@@ -109,118 +107,20 @@ extends AbstractAsyncCommand {
                 amount = Double.parseDouble(args.get(argOffset));
             }
             catch (NumberFormatException e) {
-                ctx.sendMessage(Message.raw((String)("Invalid amount: " + args.get(argOffset))).color(Color.RED));
+                ctx.sendMessage(Message.raw(("Invalid amount: " + args.get(argOffset))).color(Color.RED));
                 return CompletableFuture.completedFuture(null);
             }
             if (amount < 0.0) {
-                ctx.sendMessage(Message.raw((String)"Amount must be 0 or positive").color(Color.RED));
+                ctx.sendMessage(Message.raw("Amount must be 0 or positive").color(Color.RED));
                 return CompletableFuture.completedFuture(null);
             }
             String targetName = null;
             if (args.size() > argOffset + 1) {
                 targetName = args.get(argOffset + 1);
-            } else if (sender instanceof Player) {
-                Player player = (Player)sender;
+            } else if (sender instanceof Player player) {
                 targetName = player.getDisplayName();
             } else {
-                ctx.sendMessage(Message.raw((String)"Usage: /eco set <amount> <player> (required for console)").color(Color.RED));
-                return CompletableFuture.completedFuture(null);
-            }
-            return this.lookupAndExecute(ctx, targetName, amount);
-        }
-
-        private CompletableFuture<Void> lookupAndExecute(CommandContext ctx, String targetName, double amount) {
-            String finalTargetName;
-            if (!targetName.matches("^[a-zA-Z0-9_]{3,16}$")) {
-                ctx.sendMessage(Message.raw((String)("Invalid username format: " + targetName)).color(Color.RED));
-                return CompletableFuture.completedFuture(null);
-            }
-            for (PlayerRef online : Universe.get().getPlayers()) {
-                if (!online.getUsername().equalsIgnoreCase(targetName)) continue;
-                return this.executeOnTarget(ctx, online.getUuid(), targetName, amount);
-            }
-            H2StorageProvider h2 = Main.getInstance().getEconomyManager().getH2Storage();
-            if (h2 != null) {
-                finalTargetName = targetName;
-                return h2.getPlayerUuidByName(targetName).thenCompose(uuid -> {
-                    if (uuid != null) {
-                        return this.executeOnTarget(ctx, (UUID)uuid, finalTargetName, amount);
-                    }
-                    return PlayerDBService.lookupUuid(finalTargetName).thenCompose(apiUuid -> {
-                        if (apiUuid != null) {
-                            h2.updatePlayerName((UUID)apiUuid, finalTargetName);
-                            return this.executeOnTarget(ctx, (UUID)apiUuid, finalTargetName, amount);
-                        }
-                        ctx.sendMessage(Message.raw((String)("Player not found: " + finalTargetName)).color(Color.RED));
-                        return CompletableFuture.completedFuture(null);
-                    });
-                });
-            }
-            finalTargetName = targetName;
-            return PlayerDBService.lookupUuid(targetName).thenCompose(uuid -> {
-                if (uuid != null) {
-                    return this.executeOnTarget(ctx, (UUID)uuid, finalTargetName, amount);
-                }
-                ctx.sendMessage(Message.raw((String)("Player not found: " + finalTargetName)).color(Color.RED));
-                return CompletableFuture.completedFuture(null);
-            });
-        }
-
-        private CompletableFuture<Void> executeOnTarget(CommandContext ctx, UUID targetUuid, String targetName, double amount) {
-            double oldBalance = Main.getInstance().getEconomyManager().getBalance(targetUuid);
-            Main.getInstance().getEconomyManager().setBalance(targetUuid, amount, "Admin set for " + targetName);
-            ctx.sendMessage(Message.join((Message[])new Message[]{Message.raw((String)("Set " + targetName + " balance: ")).color(Color.GREEN), Message.raw((String)((EcotaleConfig)Main.CONFIG.get()).format(oldBalance)).color(Color.GRAY), Message.raw((String)" -> ").color(Color.WHITE), Message.raw((String)((EcotaleConfig)Main.CONFIG.get()).format(amount)).color(new Color(50, 205, 50))}));
-            EcoAdminCommand.updateHud(targetUuid, amount);
-            return CompletableFuture.completedFuture(null);
-        }
-    }
-
-    private static class EcoGiveCommand
-    extends AbstractAsyncCommand {
-        public EcoGiveCommand() {
-            super("give", "Add money to a player's balance");
-            this.addAliases(new String[]{"add"});
-            this.setAllowsExtraArguments(true);
-        }
-
-        @NonNullDecl
-        protected CompletableFuture<Void> executeAsync(CommandContext ctx) {
-            Double amount;
-            String input = ctx.getInputString();
-            String rawArgsStr = CommandUtil.stripCommandName((String)input);
-            String[] rawArgs = rawArgsStr.trim().isEmpty() ? new String[]{} : rawArgsStr.trim().split("\\s+");
-            List<String> args = Arrays.asList(rawArgs);
-            CommandSender sender = ctx.sender();
-            int argOffset = 0;
-            if (!args.isEmpty() && (args.get(0).equalsIgnoreCase("give") || args.get(0).equalsIgnoreCase("add") || args.get(0).equalsIgnoreCase("eco"))) {
-                ++argOffset;
-            }
-            if (args.size() > argOffset && (args.get(argOffset).equalsIgnoreCase("give") || args.get(argOffset).equalsIgnoreCase("add"))) {
-                ++argOffset;
-            }
-            if (args.size() <= argOffset) {
-                ctx.sendMessage(Message.raw((String)"Usage: /eco give <amount> [player]").color(Color.RED));
-                return CompletableFuture.completedFuture(null);
-            }
-            try {
-                amount = Double.parseDouble(args.get(argOffset));
-            }
-            catch (NumberFormatException e) {
-                ctx.sendMessage(Message.raw((String)("Invalid amount: " + args.get(argOffset))).color(Color.RED));
-                return CompletableFuture.completedFuture(null);
-            }
-            if (amount <= 0.0) {
-                ctx.sendMessage(Message.raw((String)"Amount must be positive").color(Color.RED));
-                return CompletableFuture.completedFuture(null);
-            }
-            String targetName = null;
-            if (args.size() > argOffset + 1) {
-                targetName = args.get(argOffset + 1);
-            } else if (sender instanceof Player) {
-                Player player = (Player)sender;
-                targetName = player.getDisplayName();
-            } else {
-                ctx.sendMessage(Message.raw((String)"Usage: /eco give <amount> <player> (required for console)").color(Color.RED));
+                ctx.sendMessage(Message.raw("Usage: /eco set <amount> <player> (required for console)").color(Color.RED));
                 return CompletableFuture.completedFuture(null);
             }
             return this.lookupAndExecute(ctx, targetName, amount);
@@ -248,7 +148,7 @@ extends AbstractAsyncCommand {
                             h2.updatePlayerName(apiUuid, finalTargetName);
                             return this.executeOnTarget(ctx, apiUuid, finalTargetName, amount);
                         }
-                        ctx.sendMessage(Message.raw((String)("Player not found: " + finalTargetName)).color(Color.RED));
+                        ctx.sendMessage(Message.raw(("Player not found: " + finalTargetName)).color(Color.RED));
                         return CompletableFuture.completedFuture(null);
                     });
                 });
@@ -264,9 +164,105 @@ extends AbstractAsyncCommand {
         }
 
         private CompletableFuture<Void> executeOnTarget(CommandContext ctx, UUID targetUuid, String targetName, double amount) {
+            double oldBalance = Main.getInstance().getEconomyManager().getBalance(targetUuid);
+            Main.getInstance().getEconomyManager().setBalance(targetUuid, amount, "Admin set for " + targetName);
+            ctx.sendMessage(Message.join((Message[])new Message[]{Message.raw((String)("Set " + targetName + " balance: ")).color(Color.GREEN), Message.raw((String)((EcotaleConfig)Main.CONFIG.get()).format(oldBalance)).color(Color.GRAY), Message.raw((String)" -> ").color(Color.WHITE), Message.raw((String)((EcotaleConfig)Main.CONFIG.get()).format(amount)).color(new Color(50, 205, 50))}));
+            EcoAdminCommand.updateHud(targetUuid, amount);
+            return CompletableFuture.completedFuture(null);
+        }
+    }
+
+    private static class EcoGiveCommand
+    extends AbstractAsyncCommand {
+        public EcoGiveCommand() {
+            super("give", "Add money to a player's balance");
+            this.addAliases("add");
+            this.setAllowsExtraArguments(true);
+        }
+
+        @NonNullDecl
+        protected CompletableFuture<Void> executeAsync(CommandContext ctx) {
+            double amount;
+            String input = ctx.getInputString();
+            String rawArgsStr = CommandUtil.stripCommandName(input);
+            String[] rawArgs = rawArgsStr.trim().isEmpty() ? new String[]{} : rawArgsStr.trim().split("\\s+");
+            List<String> args = Arrays.asList(rawArgs);
+            CommandSender sender = ctx.sender();
+            int argOffset = 0;
+            if (!args.isEmpty() && (args.getFirst().equalsIgnoreCase("give") || args.getFirst().equalsIgnoreCase("add") || args.getFirst().equalsIgnoreCase("eco"))) {
+                ++argOffset;
+            }
+            if (args.size() > argOffset && (args.get(argOffset).equalsIgnoreCase("give") || args.get(argOffset).equalsIgnoreCase("add"))) {
+                ++argOffset;
+            }
+            if (args.size() <= argOffset) {
+                ctx.sendMessage(Message.raw("Usage: /eco give <amount> [player]").color(Color.RED));
+                return CompletableFuture.completedFuture(null);
+            }
+            try {
+                amount = Double.parseDouble(args.get(argOffset));
+            }
+            catch (NumberFormatException e) {
+                ctx.sendMessage(Message.raw(("Invalid amount: " + args.get(argOffset))).color(Color.RED));
+                return CompletableFuture.completedFuture(null);
+            }
+            if (amount <= 0.0) {
+                ctx.sendMessage(Message.raw("Amount must be positive").color(Color.RED));
+                return CompletableFuture.completedFuture(null);
+            }
+            String targetName = null;
+            if (args.size() > argOffset + 1) {
+                targetName = args.get(argOffset + 1);
+            } else if (sender instanceof Player player) {
+                targetName = player.getDisplayName();
+            } else {
+                ctx.sendMessage(Message.raw("Usage: /eco give <amount> <player> (required for console)").color(Color.RED));
+                return CompletableFuture.completedFuture(null);
+            }
+            return this.lookupAndExecute(ctx, targetName, amount);
+        }
+
+        private CompletableFuture<Void> lookupAndExecute(CommandContext ctx, String targetName, double amount) {
+            String finalTargetName;
+            if (!targetName.matches("^[a-zA-Z0-9_]{3,16}$")) {
+                ctx.sendMessage(Message.raw(("Invalid username format: " + targetName)).color(Color.RED));
+                return CompletableFuture.completedFuture(null);
+            }
+            for (PlayerRef online : Universe.get().getPlayers()) {
+                if (!online.getUsername().equalsIgnoreCase(targetName)) continue;
+                return this.executeOnTarget(ctx, online.getUuid(), targetName, amount);
+            }
+            H2StorageProvider h2 = Main.getInstance().getEconomyManager().getH2Storage();
+            if (h2 != null) {
+                finalTargetName = targetName;
+                return h2.getPlayerUuidByName(targetName).thenCompose(uuid -> {
+                    if (uuid != null) {
+                        return this.executeOnTarget(ctx, uuid, finalTargetName, amount);
+                    }
+                    return PlayerDBService.lookupUuid(finalTargetName).thenCompose(apiUuid -> {
+                        if (apiUuid != null) {
+                            h2.updatePlayerName(apiUuid, finalTargetName);
+                            return this.executeOnTarget(ctx, apiUuid, finalTargetName, amount);
+                        }
+                        ctx.sendMessage(Message.raw(("Player not found: " + finalTargetName)).color(Color.RED));
+                        return CompletableFuture.completedFuture(null);
+                    });
+                });
+            }
+            finalTargetName = targetName;
+            return PlayerDBService.lookupUuid(targetName).thenCompose(uuid -> {
+                if (uuid != null) {
+                    return this.executeOnTarget(ctx, (UUID)uuid, finalTargetName, amount);
+                }
+                ctx.sendMessage(Message.raw(("Player not found: " + finalTargetName)).color(Color.RED));
+                return CompletableFuture.completedFuture(null);
+            });
+        }
+
+        private CompletableFuture<Void> executeOnTarget(CommandContext ctx, UUID targetUuid, String targetName, double amount) {
             Main.getInstance().getEconomyManager().deposit(targetUuid, amount, "Admin give to " + targetName);
             double newBalance = Main.getInstance().getEconomyManager().getBalance(targetUuid);
-            ctx.sendMessage(Message.join((Message[])new Message[]{Message.raw((String)"Added ").color(Color.GREEN), Message.raw((String)("+" + ((EcotaleConfig)Main.CONFIG.get()).format(amount))).color(new Color(50, 205, 50)), Message.raw((String)(" to " + targetName)).color(Color.WHITE), Message.raw((String)" | New balance: ").color(Color.GRAY), Message.raw((String)((EcotaleConfig)Main.CONFIG.get()).format(newBalance)).color(Color.WHITE)}));
+            ctx.sendMessage(Message.join(Message.raw("Added ").color(Color.GREEN), Message.raw((String)("+" + ((EcotaleConfig)Main.CONFIG.get()).format(amount))).color(new Color(50, 205, 50)), Message.raw((String)(" to " + targetName)).color(Color.WHITE), Message.raw((String)" | New balance: ").color(Color.GRAY), Message.raw((String)((EcotaleConfig)Main.CONFIG.get()).format(newBalance)).color(Color.WHITE)));
             EcoAdminCommand.updateHud(targetUuid, newBalance);
             return CompletableFuture.completedFuture(null);
         }
@@ -284,12 +280,12 @@ extends AbstractAsyncCommand {
         protected CompletableFuture<Void> executeAsync(CommandContext ctx) {
             double amount;
             String input = ctx.getInputString();
-            String rawArgsStr = CommandUtil.stripCommandName((String)input);
+            String rawArgsStr = CommandUtil.stripCommandName(input);
             String[] rawArgs = rawArgsStr.trim().isEmpty() ? new String[]{} : rawArgsStr.trim().split("\\s+");
             List<String> args = Arrays.asList(rawArgs);
             CommandSender sender = ctx.sender();
             int argOffset = 0;
-            if (!args.isEmpty() && (args.get(0).equalsIgnoreCase("take") || args.get(0).equalsIgnoreCase("remove") || args.get(0).equalsIgnoreCase("eco"))) {
+            if (!args.isEmpty() && (args.getFirst().equalsIgnoreCase("take") || args.getFirst().equalsIgnoreCase("remove") || args.getFirst().equalsIgnoreCase("eco"))) {
                 ++argOffset;
             }
             if (args.size() > argOffset && (args.get(argOffset).equalsIgnoreCase("take") || args.get(argOffset).equalsIgnoreCase("remove"))) {
@@ -313,11 +309,10 @@ extends AbstractAsyncCommand {
             String targetName = null;
             if (args.size() > argOffset + 1) {
                 targetName = args.get(argOffset + 1);
-            } else if (sender instanceof Player) {
-                Player player = (Player)sender;
+            } else if (sender instanceof Player player) {
                 targetName = player.getDisplayName();
             } else {
-                ctx.sendMessage(Message.raw((String)"Usage: /eco take <amount> <player> (required for console)").color(Color.RED));
+                ctx.sendMessage(Message.raw("Usage: /eco take <amount> <player> (required for console)").color(Color.RED));
                 return CompletableFuture.completedFuture(null);
             }
             return this.lookupAndExecute(ctx, targetName, amount);
@@ -382,27 +377,27 @@ extends AbstractAsyncCommand {
         @NonNullDecl
         protected CompletableFuture<Void> executeAsync(CommandContext ctx) {
             CommandSender sender = ctx.sender();
-            if (!(sender instanceof Player)) {
-                ctx.sendMessage(Message.raw((String)"This command can only be used by players").color(Color.RED));
+            if (!(sender instanceof Player player)) {
+                ctx.sendMessage(Message.raw("This command can only be used by players").color(Color.RED));
                 return CompletableFuture.completedFuture(null);
             }
-            Player player = (Player)sender;
-            Ref ref = player.getReference();
+
+            Ref<EntityStore> ref = player.getReference();
             if (ref == null || !ref.isValid()) {
                 return CompletableFuture.completedFuture(null);
             }
-            Store store = ref.getStore();
-            World world = ((EntityStore)store.getExternalData()).getWorld();
+            Store<EntityStore> store = ref.getStore();
+            World world = store.getExternalData().getWorld();
             return CompletableFuture.runAsync(() -> {
-                PlayerRef playerRef = (PlayerRef)store.getComponent(ref, PlayerRef.getComponentType());
+                PlayerRef playerRef = store.getComponent(ref, PlayerRef.getComponentType());
                 if (playerRef == null) {
                     return;
                 }
-                double startingBalance = ((EcotaleConfig)Main.CONFIG.get()).getStartingBalance();
+                double startingBalance = (Main.CONFIG.get()).getStartingBalance();
                 Main.getInstance().getEconomyManager().setBalance(playerRef.getUuid(), startingBalance, "Admin reset");
                 EcoAdminCommand.updateHud(playerRef.getUuid(), startingBalance);
-                player.sendMessage(Message.join((Message[])new Message[]{Message.raw((String)"Balance reset to ").color(Color.GREEN), Message.raw((String)((EcotaleConfig)Main.CONFIG.get()).format(startingBalance)).color(new Color(50, 205, 50))}));
-            }, (Executor)world);
+                player.sendMessage(Message.join(Message.raw("Balance reset to ").color(Color.GREEN), Message.raw(Main.CONFIG.get().format(startingBalance)).color(new Color(50, 205, 50))));
+            }, world);
         }
     }
 
@@ -413,13 +408,13 @@ extends AbstractAsyncCommand {
         }
 
         @NonNullDecl
-        protected CompletableFuture<Void> executeAsync(CommandContext ctx) {
+        protected CompletableFuture<Void> executeAsync(@NotNull CommandContext ctx) {
             Map<UUID, PlayerBalance> balances = Main.getInstance().getEconomyManager().getAllBalances();
             if (balances.isEmpty()) {
-                ctx.sendMessage(Message.raw((String)"No player balances found").color(Color.GRAY));
+                ctx.sendMessage(Message.raw("No player balances found").color(Color.GRAY));
                 return CompletableFuture.completedFuture(null);
             }
-            ctx.sendMessage(Message.raw((String)"=== Top Balances ===").color(new Color(255, 215, 0)));
+            ctx.sendMessage(Message.raw("=== Top Balances ===").color(new Color(255, 215, 0)));
             H2StorageProvider h2Storage = Main.getInstance().getEconomyManager().getH2Storage();
             List<PlayerBalance> top10 = balances.values().stream().sorted(Comparator.comparingDouble(PlayerBalance::getBalance).reversed()).limit(10L).toList();
             List<CompletableFuture<String>> nameFutures = top10.stream().map(balance -> {
@@ -430,10 +425,10 @@ extends AbstractAsyncCommand {
             }).toList();
             return CompletableFuture.allOf(nameFutures.toArray(new CompletableFuture[0])).thenAccept(v -> {
                 for (int i = 0; i < top10.size(); ++i) {
-                    PlayerBalance balance = (PlayerBalance)top10.get(i);
-                    String displayName = (String)((CompletableFuture)nameFutures.get(i)).join();
-                    String formatted = ((EcotaleConfig)Main.CONFIG.get()).format(balance.getBalance());
-                    ctx.sendMessage(Message.join((Message[])new Message[]{Message.raw((String)("#" + (i + 1) + " ")).color(Color.GRAY), Message.raw((String)displayName).color(Color.WHITE), Message.raw((String)" - ").color(Color.GRAY), Message.raw((String)formatted).color(new Color(50, 205, 50))}));
+                    PlayerBalance balance = top10.get(i);
+                    String displayName = nameFutures.get(i).join();
+                    String formatted = Main.CONFIG.get().format(balance.getBalance());
+                    ctx.sendMessage(Message.join(Message.raw(("#" + (i + 1) + " ")).color(Color.GRAY), Message.raw(displayName).color(Color.WHITE), Message.raw(" - ").color(Color.GRAY), Message.raw((String)formatted).color(new Color(50, 205, 50))));
                 }
             });
         }
@@ -448,7 +443,7 @@ extends AbstractAsyncCommand {
         @NonNullDecl
         protected CompletableFuture<Void> executeAsync(CommandContext ctx) {
             Main.getInstance().getEconomyManager().forceSave();
-            ctx.sendMessage(Message.raw((String)"\u2713 Economy data saved successfully").color(Color.GREEN));
+            ctx.sendMessage(Message.raw("\u2713 Economy data saved successfully").color(Color.GREEN));
             return CompletableFuture.completedFuture(null);
         }
     }
@@ -479,18 +474,18 @@ extends AbstractAsyncCommand {
         }
 
         @NonNullDecl
-        protected CompletableFuture<Void> executeAsync(CommandContext ctx) {
+        protected CompletableFuture<Void> executeAsync(@NotNull CommandContext ctx) {
             PerformanceMonitor monitor = PerformanceMonitor.getInstance();
             if (monitor != null) {
                 Color gold = new Color(255, 215, 0);
                 Color white = Color.WHITE;
                 Color green = new Color(50, 205, 50);
-                ctx.sendMessage(Message.raw((String)"--- Ecotale Economy Metrics ---").color(gold));
-                ctx.sendMessage(Message.join((Message[])new Message[]{Message.raw((String)"Cached Balances: ").color(white), Message.raw((String)(monitor.getCachedPlayers() + " / 1000")).color(green)}));
-                ctx.sendMessage(Message.raw((String)"---------------------------------").color(gold));
-                ctx.sendMessage(Message.raw((String)"System metrics moved to /guard metrics").color(Color.GRAY));
+                ctx.sendMessage(Message.raw("--- Ecotale Economy Metrics ---").color(gold));
+                ctx.sendMessage(Message.join(Message.raw("Cached Balances: ").color(white), Message.raw((monitor.getCachedPlayers() + " / 1000")).color(green)));
+                ctx.sendMessage(Message.raw("---------------------------------").color(gold));
+                ctx.sendMessage(Message.raw("System metrics moved to /guard metrics").color(Color.GRAY));
             } else {
-                ctx.sendMessage(Message.raw((String)"Performance monitor is not active.").color(Color.RED));
+                ctx.sendMessage(Message.raw("Performance monitor is not active.").color(Color.RED));
             }
             return CompletableFuture.completedFuture(null);
         }
